==> Ralim/stm32-libraries/ILI9341.cpp <==
#include "GUI/ILI9341.h"

void ILI9341::writecommand(uint8_t c) {
	LCD_DC_LOW
	LCD_CS_LOW
	HAL_SPI_Transmit(spi_port, &c, 1, 100);
	LCD_CS_HIGH
}

void ILI9341::writedata(uint8_t c) {
	LCD_DC_HIGH
	LCD_CS_LOW
	HAL_SPI_Transmit(spi_port, &c, 1, 1000);
	LCD_CS_HIGH
}

void ILI9341::begin() {
	LCD_CS_LOW

	const uint8_t *addr = init_commands;
	while (1) {
		uint8_t count = *addr++;
		if (count-- == 0)
			break;
		writecommand_cont(*addr++);
		while (count-- > 0) {
			writedata8_cont(*addr++);
		}
	}
	LCD_CS_HIGH

	writecommand(ILI9341_SLPOUT);    //Exit Sleep

	HAL_Delay(120);

	writecommand(ILI9341_DISPON);    //Display on
	setRotation(3);    //Set display into landscape mode
}

void ILI9341::fillRect(int16_t x, int16_t y, int16_t w, int16_t h, uint16_t color) {

	// rudimentary clipping (drawChar w/big text requires this)
	/*if ((x >= ILI9341_TFTWIDTH) || (y >= ILI9341_TFTHEIGHT))
	 return;
	 if ((x + w - 1) >= ILI9341_TFTWIDTH)
	 w = ILI9341_TFTWIDTH - x;
	 if ((y + h - 1) >= ILI9341_TFTHEIGHT)
	 h = ILI9341_TFTHEIGHT - y;
	 */
	ILI9341::setAddrWindow(x, y, x + w - 1, y + h - 1);
//We need to change SPI to 16 bit interface
	LCD_CS_LOW
	spiwrite16Rpt(color, ((uint32_t) w) * ((uint32_t) h));
	LCD_CS_HIGH
}

void ILI9341::setAddrWindow(uint16_t x0, uint16_t y0, uint16_t x1, uint16_t y1) {

	writecommand(ILI9341_CASET); // Column addr set
	spi_port->Init.DataSize = SPI_DATASIZE_16BIT;
	HAL_SPI_Init(spi_port);
	LCD_DC_HIGH
	LCD_CS_LOW
	HAL_SPI_Transmit(spi_port, (uint8_t*) &x0, 1, 100);
	HAL_SPI_Transmit(spi_port, (uint8_t*) &x1, 1, 100);
	LCD_CS_HIGH

	spi_port->Init.DataSize = SPI_DATASIZE_8BIT;
	HAL_SPI_Init(spi_port);

	writecommand(ILI9341_PASET); // Row addr set

	spi_port->Init.DataSize = SPI_DATASIZE_16BIT;
	HAL_SPI_Init(spi_port);
	LCD_DC_HIGH
	LCD_CS_LOW
	HAL_SPI_Transmit(spi_port, (uint8_t*) &y0, 1, 100);
	HAL_SPI_Transmit(spi_port, (uint8_t*) &y1, 1, 100);
	LCD_CS_HIGH
	spi_port->Init.DataSize = SPI_DATASIZE_8BIT;
	HAL_SPI_Init(spi_port);
	writecommand(ILI9341_RAMWR); // write to RAM follows
}

void ILI9341::drawPixel(int16_t x, int16_t y, uint16_t color) {

	if ((x < 0) || (x >= ILI9341_TFTWIDTH) || (y < 0) || (y >= ILI9341_TFTHEIGHT))
		return;

	ILI9341::setAddrWindow(x, y, x + 1, y + 1);
	LCD_DC_HIGH
	spi_port->Init.DataSize = SPI_DATASIZE_16BIT;
	HAL_SPI_Init(spi_port);

	LCD_CS_LOW
	HAL_SPI_Transmit(spi_port, (uint8_t *) &color, 1, 200);
	LCD_CS_HIGH
	spi_port->Init.DataSize = SPI_DATASIZE_8BIT;
	HAL_SPI_Init(spi_port);
}

void ILI9341::drawFastVLine(int16_t x, int16_t y, int16_t h, uint16_t color) {

	if ((y + h - 1) >= ILI9341_TFTHEIGHT)
		h = ILI9341_TFTHEIGHT - y;

	setAddrWindow(x, y, x, y + h - 1);
	LCD_CS_LOW
	spiwrite16Rpt(color, ((uint32_t) h));
	LCD_CS_HIGH
}

void ILI9341::drawFastHLine(int16_t x, int16_t y, int16_t w, uint16_t color) {

	// Rudimentary clipping
	if ((x >= ILI9341_TFTWIDTH) || (y >= ILI9341_TFTHEIGHT))
		return;
	if ((x + w - 1) >= ILI9341_TFTWIDTH)
		w = ILI9341_TFTWIDTH - x;

	ILI9341::setAddrWindow(x, y, x + w - 1, y);

	LCD_CS_LOW
	spiwrite16Rpt(color, ((uint32_t) w));
	LCD_CS_HIGH

	//writecommand(ILI9341_NOP);
}

void ILI9341::drawLine(int16_t x0, int16_t y0, int16_t x1, int16_t y1, uint16_t color) {
	int16_t steep = abs(y1 - y0) > abs(x1 - x0);
	if (steep) {
		_swap_int16_t(x0, y0);
		_swap_int16_t(x1, y1);
	}

	if (x0 > x1) {
		_swap_int16_t(x0, x1);
		_swap_int16_t(y0, y1);
	}

	int16_t dx, dy;
	dx = x1 - x0;
	dy = abs(y1 - y0);

	int16_t err = dx / 2;
	int16_t ystep;

	if (y0 < y1) {
		ystep = 1;
	} else {
		ystep = -1;
	}

	for (; x0 <= x1; x0++) {
		if (steep) {
			drawPixel(y0, x0, color);
		} else {
			drawPixel(x0, y0, color);
		}
		err -= dy;
		if (err < 0) {
			y0 += ystep;
			err += dx;
		}
	}
}

void ILI9341::drawChar(int16_t x, int16_t y, unsigned char c, uint16_t fgcolor, uint16_t bgcolor, uint8_t size) {

	//This works by unrolling the drawRect code into here
	setAddrWindow(x, y, x + 6 * size - 1, y + 8 * size - 1);
	spi_port->Init.DataSize = SPI_DATASIZE_16BIT;
	HAL_SPI_Init(spi_port);
	uint8_t mask = 0x01;
	uint16_t color;
	uint8_t yr;
	LCD_DC_HIGH
	LCD_CS_LOW

	for (y = 0; y < 8; y++) {
		for (yr = 0; yr < size; yr++) {
			for (x = 0; x < 5; x++) {
				if (font[c * 5 + x] & mask) {
					color = fgcolor;
				} else {
					color = bgcolor;
				}
				//push pixels fast (this function has less overhead)
				spiwrite16Rpt(color, size);
			}
			spiwrite16Rpt(bgcolor, size);
		}
		mask = mask << 1;
	}

	LCD_CS_HIGH
}
